kubernetes/infrastructure/controllers/rancher/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rancher
  namespace: cattle-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Rancher
    gethomepage.dev/group: Platform
    gethomepage.dev/icon: rancher.png
    gethomepage.dev/href: https://rancher.syslabs.dev
    gethomepage.dev/podSelector: app=rancher
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rancher.syslabs.dev`)
      kind: Rule
      middlewares:
        - name: rancher-forwarded-proto
        - name: authentik-forward-auth
      services:
        - name: rancher
          port: 80
  tls: {}
